--- a/index.html
+++ b/index.html
@@ -14,21 +14,37 @@
             </svg>
             <span class="text-3xl font-bold">Security</span>
         </a>
-        <div class="flex gap-2" >
-            <a href="login.html" class="rounded-md bg-gray-200 py-2 px-4 text-gray-900 font-semibold shadow-lg hover:shadow-xl focus:shadow-xl hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-300 focus:ring-offset-2 transition duration-150 ease-in-out">Sing In</a>
+        <div>
             <a href="register.html" class="rounded-md bg-green-600 py-2 px-4 text-white font-semibold shadow-lg hover:shadow-xl focus:shadow-xl hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 transition duration-150 ease-in-out">Sing Up</a>
         </div>
-        
     </header>
     <main class="flex flex-col justify-center p-6 pb-12">
         <div class="mx-auto max-w-md">
             <svg class="h-12 mx-auto text-green-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z" />
-            </svg>
-            <h2 class=" mt-2 sm:mt-6 text-2xl sm:text-3xl font-bold text-gray-900" >Reset password</h2>
+                <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25A2.25 2.25 0 0 0 13.5 3h-6a2.25 2.25 0 0 0-2.25 2.25v13.5A2.25 2.25 0 0 0 7.5 21h6a2.25 2.25 0 0 0 2.25-2.25V15m3 0 3-3m0 0-3-3m3 3H9" />
+            </svg> 
+            <h2 class=" mt-2 sm:mt-6 text-2xl sm:text-3xl font-bold text-gray-900" >Welcome back</h2>
         </div>
         <div class="bg-white/50 backdrop-blur-xl mt-6 sm:mt-10 p-6 sm:p-10 mx-auto rounded-xl shadow-xl w-full max-w-md">
-            <form class="space-y-6" action="#" autocomplete="off">
+            <div class="rounded-md bg-red-50 border border-red-500 p-4 flex gap-3">
+                <svg class="h-6 w-6 text-red-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                    <path fill-rule="evenodd" d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12ZM12 8.25a.75.75 0 0 1 .75.75v3.75a.75.75 0 0 1-1.5 0V9a.75.75 0 0 1 .75-.75Zm0 8.25a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Z" clip-rule="evenodd" />
+                </svg> 
+                <h3 class="text-sm font-medium text-red-800">These credential do not match our records.</h3>
+            </div>
+            <form class="space-y-6 mt-6" action="#" autocomplete="off">
+                <div>
+                    <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+                    <div class="relative rounded-md shadow-sm mt-1">
+                        <div class="absolute left-0 pl-3 inset-y-0 flex items-center">
+                            <svg class="h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
+                            </svg> 
+                        </div>
+                        <input type="email" id="email" name="email"  class="border border-gray-300 rounded-md focus:border-green-500 focus:ring-green-500 text-sm pl-10 w-full" placeholder="jonh@example.com">
+                    </div>
+                </div>
+
                 <div>
                     <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
                     <div class="relative rounded-md shadow-sm mt-1">
@@ -40,19 +56,17 @@
                         <input type="password" id="password" name="password" minlength="8" class="border border-gray-300 rounded-md focus:border-green-500 focus:ring-green-500 text-sm pl-10 w-full" placeholder="Minimum 8 character">
                     </div>
                 </div>
-                <div>
-                    <label for="password_confirmation" class="block text-sm font-medium text-gray-700">Confirm Password</label>
-                    <div class="relative rounded-md shadow-sm mt-1">
-                        <div class="absolute left-0 pl-3 inset-y-0 flex items-center">
-                            <svg class="h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z" />
-                            </svg> 
-                        </div>
-                        <input type="password" id="password_confirmation" name="password_confirmation" minlength="8" class="border border-gray-300 rounded-md focus:border-green-500 focus:ring-green-500 text-sm pl-10 w-full" placeholder="Minimum 8 character">
+                    
+
+                <div class="flex items-center justify-between">
+                    <div class="flex items-center gap-2">
+                        <input class="h-4 w-4 rounded border-gray-300 text-green-600 focus:ring-green-600" type="checkbox" name="remember" id="remember">
+                        <label for="remember" class="text-sm text-gray-900 font-semibold">Remember me</label>
                     </div>
+                    <a href="forgot-password.html" class="text-sm text-green-600 font-medium hover:text-green-500">Forgout your password?</a>
                 </div>
                 <div>
-                    <a href="verify-email.html" class="rounded-md bg-green-600 py-2 px-4 text-white font-semibold shadow-lg hover:shadow-xl focus:shadow-xl hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 transition duration-150 ease-in-out flex justify-center items-center">Reset password</a>
+                    <a href="login.html" class="rounded-md bg-green-600 py-2 px-4 text-white font-semibold shadow-lg hover:shadow-xl focus:shadow-xl hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 transition duration-150 ease-in-out flex justify-center items-center">Sing In</a>
                 </div>
             </form>
         </div>
